[package]
name = "exchange_rate"
version = "0.1.0"
authors = ["lishuxiang <lishuxiang@cug.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
reqwest = { version = "0.10.4"}
regex = "1.3.6"
tokio = { version = "0.2.15", features = ["macros"] }
